--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <title> Document </title>
+    <title> Yeeun Heo </title>
+    <link rel="shortcut icon" type="image/x-icon" href="/src/assets/me.png">
 </head>
 <body>
     <div id="root"></div>
